# kxmlgui

./: CMakeLists.txt
autotests/: CMakeLists.txt  kxmlgui5configmigrationtest.cpp  kxmlgui_unittest.cpp
po/af/: kxmlgui6.po
po/ar/: kxmlgui6.po
po/as/: kxmlgui6.po
po/ast/: kxmlgui6.po
po/az/: kxmlgui6.po
po/be/: kxmlgui6.po
po/be@latin/: kxmlgui6.po
po/bg/: kxmlgui6.po
po/bn/: kxmlgui6.po
po/bn_IN/: kxmlgui6.po
po/br/: kxmlgui6.po
po/bs/: kxmlgui6.po
po/ca/: kxmlgui6.po
po/ca@valencia/: kxmlgui6.po
po/crh/: kxmlgui6.po
po/cs/: kxmlgui6.po
po/csb/: kxmlgui6.po
po/cy/: kxmlgui6.po
po/da/: kxmlgui6.po
po/de/: kxmlgui6.po
po/el/: kxmlgui6.po
po/en_GB/: kxmlgui6.po
po/eo/: kxmlgui6.po
po/es/: kxmlgui6.po
po/et/: kxmlgui6.po
po/eu/: kxmlgui6.po
po/fa/: kxmlgui6.po
po/fi/: kxmlgui6.po
po/fr/: kxmlgui6.po
po/fy/: kxmlgui6.po
po/ga/: kxmlgui6.po
po/gd/: kxmlgui6.po
po/gl/: kxmlgui6.po
po/gu/: kxmlgui6.po
po/ha/: kxmlgui6.po
po/he/: kxmlgui6.po
po/hi/: kxmlgui6.po
po/hne/: kxmlgui6.po
po/hr/: kxmlgui6.po
po/hsb/: kxmlgui6.po
po/hu/: kxmlgui6.po
po/hy/: kxmlgui6.po
po/ia/: kxmlgui6.po
po/id/: kxmlgui6.po
po/ie/: kxmlgui6.po
po/is/: kxmlgui6.po
po/it/: kxmlgui6.po
po/ja/: kxmlgui6.po
src/: CMakeLists.txt  kabstractaboutdialog_p.cpp  kedittoolbar.cpp  khelpmenu.cpp  khelpmenu.h  kmainwindow.cpp  kxmlgui5configmigration.cpp  kxmlgui5configmigration.h  kxmlguiclient.cpp  kxmlguiclient.h  kxmlguifactory.cpp  kxmlguiversionhandler.cpp  kxmlguiwindow.cpp
tests/: kxmlguiwindowtest.cpp
(+62 files in other folders)
